# book_library

./: .gitignore  README.md  index.html  livereload_server.py  main.py  pyproject.toml  render_website.py  template.html
media/: books.json
pages/: index1.html  index2.html  index3.html
src/: livereload_server.py  parse_tululu.py  render_website.py
src/templates/: template.html
