[tool.poetry]
name = "book-library"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "book_library"}]

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
