[tool.poetry]
name = "book-library"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "book_library"}]

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
livereload = "^2.6.3"


[tool.black]
line-length = 100
skip-string-normalization = true

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
pathvalidate = "^2.5.2"
tqdm = "^4.64.1"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
